--- a/static/css/stylesHome.css
+++ b/static/css/stylesHome.css
@@ -16,7 +16,7 @@ body {
 .home {
     width: 100%;
     height: 100vh;
-    background-image: url("../images/FondoHome_solo.jpg");
+    background-image: url("../images/Fondonew.png");
     background-position: center top;
     background-size: cover;
 }
