--- a/static/css/stylesGestorOperaciones.css
+++ b/static/css/stylesGestorOperaciones.css
@@ -1,20 +1,3 @@
-.fondo {
-  background-image: url(../images/Fondonew.png);
-  height: 100vh;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-/* CSS personalizado para cambiar el color de fondo y el color del texto del botón */
-.btn-personalizado {
-  background-color: 01152a;
-  /* Cambia el color de fondo según tus preferencias */
-  color: white !important;
-  border: none;
-  /* Cambia el color del texto a blanco */
-}
-
 .Set_Botones {
   align-items: center;
 }
@@ -69,7 +52,11 @@
   content: " ";
   display: block;
   margin: 5px 0;
-  /* Ajusta el espacio entre la imagen y el texto según tus preferencias */
+}
+
+.table-container {
+  max-height: 70vh;  /* Establece la altura máxima de la tabla */
+  overflow-y: auto;  /* Agrega un desplazamiento vertical cuando sea necesario */
 }
 
 .container-md px-4 d-flex justify-content-center align-items-center {
@@ -89,12 +76,6 @@
 
 #Buscar {
   color: white;
-}
-
-.fondo {
-  background-color: #01152a;
-  /* Cambia el color de fondo del botón según tus preferencias */
-
 }
 
 ::placeholder {
