--- a/erp/templates/html/gestorOperaciones.html
+++ b/erp/templates/html/gestorOperaciones.html
@@ -1,90 +1,86 @@
 {% extends 'html/base.html' %}
 
-{% block title %}Gestor de Operaciones{% endblock %}
+{% block title %}
+  Gestor de Operaciones
+{% endblock %}
 
 {% block module_styles %}
-    {% load static %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesGestorOperaciones.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesBase.css' %}">
+  {% load static %}
+  <link rel="stylesheet" type="text/css" href="{% static 'css/stylesGestorOperaciones.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'css/stylesBase.css' %}" />
 {% endblock %}
 
 {% block content %}
-<div class="container " style="margin-top: 30px;">
-    <div class="row ">
-        <div class="row">
-            <div class="col-md-3" style="width: 25%;">
-                <img src="{% static 'images/Operaciones.png' %}" alt="Texto alternativo de la imagen" class="mb-2" width="10%">
-                <span style="color: white;">Operaciones</span>
-            </div>
-            <div class="col-md-9" style="width: 75%;">
-                <input class="bg-personalizado rounded-pill" type="text" id="Buscar" placeholder="   Buscar" style="color: #ffffff; background-color: #01152a; border: none; margin-left: 1.2%;">
-            </div>
+  <div class="container" style="margin-top: 20px;">
+    <div class="row">
+      <div class="row">
+        <div class="col-md-3" style="margin-left: 1.8%; width: 25%;">
+          <img src="{% static 'images/Operaciones.png' %}" alt="Texto alternativo de la imagen" class="mb-2" width="10%" />
+          <span style="color: white;">Operaciones</span>
         </div>
+        <div class="col-md-9" style="width: auto; margin-top: 0.5%; position: fixed; margin-left: 17.9%">
+          <input class="bg-personalizado rounded-pill" type="text" id="Buscar" placeholder="   Buscar" style="color: #ffffff; background-color: #01152a; border: none;" />
+        </div>
+      </div>
     </div>
 
     <div class="container px-4">
-        <div class="row">
-            <div class="col-md-3" style="width: 25%;">
-                <a class="btn btn-secondary" href="javascript:history.back()">Volver</a>
-                <a href="{% url 'erp:nueva_ficha' %}" class="btn btn-personalizado" style="background-color: #01152a; ">+ Nueva Ficha</a>
-                <div class="form-check" style="margin-top: 30px;">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckTerminado">
-                    <label class="form-check-label" for="flexCheckDefault" style="color: white; background-color: transparent;">
-                        Terminado
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckEnProceso">
-                    <label class="form-check-label" for="flexCheckDefault" style="color: white; background-color: transparent;">
-                        En proceso
-                    </label>
-                </div>
-                <div class="form-check">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckNoIniciado">
-                    <label class="form-check-label" for="flexCheckDefault" style="color: white; background-color: transparent;">
-                        No iniciado
-                    </label>
-                </div>
-            </div>
-            
-            <div class="col-md-9" style="width: 75%;">
-                <div class="p-3" style="width: 100%; height: 70vh; background-color: #01152a;">
-                    <div class="d-flex flex-column h-100 w-100">
-                        <div class="card-body flex-grow-1" style="color: white;">
-                            <table class="table " style="color: white; width: 100%;">
-                                <thead class="">
-                                    <tr>
-                                        <th>Nave</th>
-                                        <th>Fecha</th>
-                                        <th></th>
-                                        <th>Acción</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for ficha in fichas %}
-                                    <tr data-correo="{{ ficha.id }}">
-                                        <td>{{ ficha.Nave }}</td>
-                                        <td>{{ ficha.fecha_creacion|date:'d-m-Y' }}</td>
-                                        <td>{{ ficha.Estado }}</td>
-                                        <td>
-                                            <a href="{% url 'erp:descargar-excel' %}" target="_blank">Descargar</a>
-                                            <a href="{% url 'erp:eliminar-ficha' ficha.id %}" onclick="return confirm('¿Estás seguro de eliminar esta ficha?')">Eliminar</a>
-                                        </td>
-                                    </tr>
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="row">
+        <div class="col-md-3" style="width: 25%;">
+          <button type="button" class="btn btn-personalizado" onclick="window.location.href='{% url 'erp:nueva_ficha' %}'" style="background-color: #a30000;border-radius: 10px;">+ Nueva Motonave</button>
+          <div class="form-check" style="margin-top: 10px;">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+            <label class="form-check-label" for="flexCheckDefault" style="color: white; background-color: transparent;">Terminado</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+            <label class="form-check-label" for="flexCheckDefault" style="color: white; background-color: transparent;">En Proceso</label>
+          </div>
+          <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
+            <label class="form-check-label" for="flexCheckDefault" style="color: white; background-color: transparent;">No Iniciado</label>
+          </div>
+          <a class="btn btn-secondary" href="{% url 'erp:menu' %}" style="margin-top: 5%;">Volver</a>
         </div>
-    </div>
-</div>
 
+        <div class="col-md-9" style="width: 75%;">
+            <div class="p-3 table-container" style="width: 100%; background-color: #01152a; border-radius: 10px;">
+            <div class="d-flex flex-column h-100 w-100">
+              <div class="card-body flex-grow-1" style="color: white;">
+                <table class="table" style="color: white; width: 100%;">
+                  <thead>
+                    <tr>
+                      <th>Motonave</th>
+                      <th>Fecha</th>
+                      <th></th>
+                      <th>Acción</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    {% for ficha in fichas %}
+                      <tr data-correo="{{ ficha.id }}">
+                        <td>{{ ficha.Nave }}</td>
+                        <td>{{ ficha.fecha_creacion|date:'d-m-Y' }}</td>
+                        <td>{{ ficha.Estado }}</td>
+                        <td>
+                          <a href="{% url 'erp:descargar-excel' %}" target="_blank">Descargar</a>
+                          <a href="{% url 'erp:eliminar-ficha' ficha.id %}" onclick="return confirm('¿Estás seguro de eliminar esta ficha?')">Eliminar</a>
+                        </td>
+                      </tr>
+                    {% endfor %}
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock %}
 
 {% block module_scripts %}
-    <!-- Scripts específicos de la página de menú -->
-    <script src="{% static 'js/scriptGestorOperaciones.js' %}"></script>
+  <!-- Scripts específicos de la página de menú -->
+  <script src="{% static 'js/scriptGestorOperaciones.js' %}"></script>
+  
 {% endblock %}
