--- a/static/css/stylesBase.css
+++ b/static/css/stylesBase.css
@@ -1,3 +1,9 @@
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
 .fondo {
   background-image: url(../images/Fondonew.png);
   min-height: 100vh;
@@ -7,19 +13,21 @@
   overflow: hidden; /* Esto evita el scroll */
 }
 
-
-body {
-  margin: 0;
-  padding: 0;
-}
-
   /* stylesBase.css u otro archivo de estilos */
 .bg-blue {
-  background-color: #01152a  !important; /* Puedes ajustar el color según tus necesidades */
+  background-color: #01152a  !important;
 }
 
-/* CSS personalizado para cambiar el color de fondo y el color del texto del botón */
 .btn-personalizado {
   color: white !important;
   border:none; /* Cambia el color del texto a blanco */
-}  
+} 
+
+footer {
+  background-color: #01152a;
+  color: white;
+  padding: 20px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+}
