--- a/static/css/stylesMenu.css
+++ b/static/css/stylesMenu.css
@@ -1,23 +1,30 @@
-.Set_Botones{
+.Set_Botones {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   align-items: center;
+  margin-top: 100px;
 }
 
-.Operaciones{
+  
+.Operaciones {
   background-color: #01152a; /* Cambia el color de fondo del botón según tus preferencias */
   color: rgb(255, 255, 255); /* Cambia el color del texto del botón según tus preferencias */
   border: none;
   padding: 10px 20px;
   cursor: pointer;
   border-radius: 10px;
-  
 }
 .btn-operaciones{
-  width: 200px; /* Ajusta el ancho de la imagen según tus preferencias */
-  height: 400px; /* Ajusta la altura de la imagen según tus preferencias */
-  display: block; /* Esto ayuda a centrar la imagen dentro del botón */
+  width: 200px; /* Ancho aumentado para hacerlos más cuadrados */
+  height: 400px; /* Altura deseada */
+  display: flex; /* Esto ayuda a centrar la imagen dentro del botón */
   margin: 0 auto; /* Esto también ayuda a centrar la imagen */
   color: rgb(255, 255, 255);
-}
+  justify-content: center;
+  align-items: center;
+  }
+  
 
 .Botones button {
   background-color: #01152a; /* Cambia el color de fondo del botón según tus preferencias */
@@ -28,12 +35,11 @@
   border-radius: 10px;
 }
 .Botones button img {
-  width: 50px; /* Ajusta el ancho de la imagen según tus preferencias */
-  height: 50px; /* Ajusta la altura de la imagen según tus preferencias */
+  width: 50px; /* Ancho aumentado para hacerlos más cuadrados */
+  height: 50px; /* Altura deseada */
   display: block; /* Esto ayuda a centrar la imagen dentro del botón */
   margin: 0 auto; /* Esto también ayuda a centrar la imagen */
 }
-
 .Botones button br {
   content: " ";
   display: block;
