--- a/static/css/stylesNavio.css
+++ b/static/css/stylesNavio.css
@@ -59,3 +59,29 @@ body {
     border-radius: 10px;
     cursor: pointer;
 }
+
+img {
+    max-width: 200%;
+    height: auto;
+}
+
+.form-container {
+    margin-left: 20px;
+    text-align: left;
+}
+
+.textbox, .selectbox {
+    margin: 5px;
+}
+
+@media only screen and (min-width: 600px) {
+    .textbox, .date-input {
+        width: 300px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .textbox, .date-input {
+        width: calc(100% - 10px);
+    }
+}
